fix app overflow on page load

--- a/src/app/styles/content.scss
+++ b/src/app/styles/content.scss
@@ -3,4 +3,5 @@ main {
     display: flex;
     // min-height: calc(100vh - 64px);
     padding-top: 64px;
+    max-width: 100vw;
 }
